--- a/privilegeddaemonset.yaml
+++ b/privilegeddaemonset.yaml
@@ -20,4 +20,5 @@ spec:
         command: ['sh', '-c', 'echo 4194303 > /proc/sys/kernel/pid_max; sleep 10m; echo "MAX PID configured"']
         securityContext:
           privileged: true
+      activeDeadlineSeconds: 3600
       
