--- a/privilegeddaemonset.yaml
+++ b/privilegeddaemonset.yaml
@@ -21,4 +21,6 @@ spec:
         securityContext:
           privileged: true
       activeDeadlineSeconds: 3600
+      nodeSelector:
+        beta.kubernetes.io/os: linux
       
